<resources>
    <string name="app_name">OrderManager</string>
    <string name="order_confirm">订单确认</string>
    <string name="choose_ship">选择收货人</string>
    <string name="pay_and_ship">在线支付 快递运输</string>
    <string name="submit_order">提交订单</string>
    <string name="payment_distribution">支付配送</string>
    <string name="new_address">新建地址</string>
    <string name="address_manager">地址管理</string>
    <string name="ship_name_colon">收货人:</string>
    <string name="contact_colon">联系方式:</string>
    <string name="address_detail_colon">详细地址:</string>
    <string name="my_orders">我的订单</string>
    <string name="self_operated">自营</string>
    <string name="cancel_order">取消订单</string>
    <string name="go_pay">去支付</string>
    <string name="confirm_receive">确认收货</string>
    <string name="pending_pay">待支付</string>
    <string name="pending_receive">待收货</string>
    <string name="already_complete">已完成</string>
    <string name="already_cancel">已取消</string>
</resources>
