<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/common_white"
              android:layout_marginBottom="@dimen/common_margin"
              style="@style/WrapWrap.Vertical">
    <RelativeLayout style="@style/MatchWrap">
        <TextView
                style="@style/WrapWrap"
                android:id="@+id/mOrderTypeTextView"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_padding"
                android:paddingTop="@dimen/common_padding_small"
                android:paddingRight="@dimen/common_padding_small"
                android:paddingBottom="@dimen/common_padding_small"
                android:text="@string/self_operated"
                android:textColor="@color/text_light_dark"
                android:drawableLeft="@drawable/icon_shop"
                android:drawablePadding="@dimen/common_padding_small"/>
        <TextView
                android:id="@+id/mOrderStatusNameTextView"
                style="@style/WrapWrap"
                android:paddingRight="@dimen/common_padding_small"
                android:textColor="@color/common_yellow"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/mMultiGoodsLinearLayout"
            style="@style/MatchWrap.Horizontal"
            android:background="@color/common_bg"
            android:visibility="gone"/>

    <!--单个商品显示-->
    <RelativeLayout
            android:id="@+id/mSingleGoodsRelativeLayout"
            style="@style/MatchWrap.Common"
            android:padding="@dimen/common_padding_small">
        <ImageView
                android:id="@+id/mGoodsIconImageView"
                android:layout_width="@dimen/common_icon_width"
                android:layout_height="@dimen/common_icon_height"
                android:layout_marginLeft="@dimen/common_margin"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"/>
        <TextView
                android:id="@+id/mGoodsDescTextView"
                style="@style/WrapWrap"
                android:textSize="@dimen/text_small_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_toRightOf="@id/mGoodsIconImageView"/>
        <TextView
                android:id="@+id/mGoodsPriceTextView"
                style="@style/MatchWrap"
                android:textColor="@color/common_red"
                android:layout_marginTop="@dimen/common_margin_small"
                android:layout_below="@id/mGoodsDescTextView"
                android:layout_alignLeft="@id/mGoodsDescTextView"/>
        <TextView
                android:id="@+id/mGoodsCountTextView"
                style="@style/WrapWrap"
                android:textSize="@dimen/text_small_size"
                android:textColor="@color/text_dark"
                android:layout_alignTop="@id/mGoodsPriceTextView"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <TextView
            android:id="@+id/mOrderInfoTextView"
            style="@style/MatchWrap"
            android:textSize="@dimen/text_small_size"
            android:gravity="right"
            android:background="@drawable/border_bottom"
            android:padding="@dimen/common_padding_small"/>

    <!--底部操作按钮栏-->
    <LinearLayout
            android:id="@+id/mBottomButtonLayout"
            style="@style/MatchWrap.Horizontal"
            android:gravity="right"
            android:background="@color/common_white"
            android:padding="@dimen/common_padding_small">
        <Button
                android:id="@+id/mConfirmButton"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:text="@string/confirm_receive"
                android:textSize="@dimen/text_small_size"
                android:textColor="@color/common_blue"
                android:background="@drawable/corner_blue_white_bg"
                android:layout_marginRight="@dimen/common_margin"
        />
        <Button
                android:id="@+id/mPayButton"
                android:layout_width="wrap_content"
                android:layout_height="30.0dip"
                android:text="@string/go_pay"
                android:textSize="@dimen/text_small_size"
                android:textColor="@color/common_blue"
                android:background="@drawable/corner_blue_white_bg"
                android:layout_marginRight="@dimen/common_margin"/>
        <Button
                android:id="@+id/mCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="30.0dip"
                android:text="@string/cancel_order"
                android:textSize="@dimen/text_small_size"
                android:textColor="@color/text_light_dark"
                android:background="@drawable/corner_gray_white_bg"/>
    </LinearLayout>
</LinearLayout>
